[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iostoolbox"
version = "0.1.0"
authors = [
  {name="Matthew McKenna"},
]
description = "Utility to extract databases from an unencrypted iOS backup"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
iostoolbox = "iosextract:main"

[project.urls]
"Homepage" = "https://github.com/matthewmckenna/ios-extract"
"Bug Tracker" = "https://github.com/matthewmckenna/ios-extract/issues"
