# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iosextract"
version = "0.1.0"
authors = [
  {name="Matthew McKenna"},
]
description = "Utility to extract databases from an unencrypted iOS backup"
# dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
iostoolbox = "iosextract.extract_files:main"

[project.urls]
"Homepage" = "https://github.com/matthewmckenna/ios-extract"
"Bug Tracker" = "https://github.com/matthewmckenna/ios-extract/issues"
