[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "iostoolbox"
version = "0.1.0"
authors = [{name = "Matthew McKenna"}]
description = "Tools to work with databases extracted from an iOS backup"
readme = "README.md"
license = {file = "LICENSE"}
# requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: macOS",
]
dependencies = ["pyyaml", "rich"]

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov"]

[project.scripts]
iostoolbox = "iosextract.extract_files:iostoolbox"
# this is what we want the command to be invoke as
# iostoolbox = "iostoolbox.cli:cli"

[tool.black]
line-length = 100
# the minimum supported Python version for Black's output
target-version = ['py311']
# use preview style for formatting
preview = true

[tool.coverage.html]
directory = ".out/htmlcov"

[tool.coverage.run]
source = ["iostoolbox", "tests"]
# omit = ["data", "docs", "legacy", "logs"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
minversion = "7.2.2"
# -ra:
  # -r: display a "short test summary info"
  # -a: "all except passes"
addopts = "-ra -v --cov-report=html --cov-report=term --cov-report=xml:.out/coverage.xml"
testpaths = [
    "tests",
]

[project.urls]
"Homepage" = "https://github.com/matthewmckenna/ios-extract"
"Bug Tracker" = "https://github.com/matthewmckenna/ios-extract/issues"
